Closed
Bug 1248309
Opened 5 years ago
Closed 5 years ago
AccessibleCaret zoom level is wrong after automatically zooming in
Categories
(Core :: DOM: Selection, defect)
Tracking
()
RESOLVED
FIXED
mozilla47
Tracking | Status | |
---|---|---|
firefox47 | --- | fixed |
People
(Reporter: TYLin, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Steps to reproduce on Fennec: 1. Open a page with input field like www.google.com 2. Type some text into the field, and long press to select a word. Expected results: If the input field is automatically zoomed in after selecting a word, the size of the caret should be retained like you pinch-zoom in. Actual results: After zooming in, the carets become bigger. However, they'll turn into the correct size if you drag them or pan the page.
Assignee | ||
Comment 1•5 years ago
|
||
This bug somewhat depends on bug 1246918. Otherwise the carets might missing after long pressing.
Depends on: 1246918
Assignee | ||
Comment 2•5 years ago
|
||
On Fennec, it's possible that after automatically zooming an editable input, the mImaginaryCaretRect for the caret remains the same. Only the zoom level is changed. Therefore, the zoom level should also be considered to determine whether the position is changed or not so that the caret can get updated. Review commit: https://reviewboard.mozilla.org/r/34967/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/34967/
Attachment #8719428 -
Flags: review?(roc)
Comment on attachment 8719428 [details] MozReview Request: Bug 1248309 - Fix caret size not updated when only zoom level is changed. r=roc https://reviewboard.mozilla.org/r/34967/#review31881
Attachment #8719428 -
Flags: review?(roc) → review+
Comment 5•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/1378bf53b053
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox47:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in
before you can comment on or make changes to this bug.
Description
•