Bug 1248309 - Fix caret size not updated when only zoom level is changed. r=roc

On Fennec, it's possible that after automatically zooming an editable
input, the mImaginaryCaretRect for the caret remains the same. Only the
zoom level is changed. Therefore, the zoom level should also be
considered to determine whether the position is changed or not so that
the caret can get updated.

MozReview-Commit-ID: CrictS4S0Yl

--HG--
extra : rebase_source : f26f89cb72a9ae8a55104054121486a67e841513